[gd_scene load_steps=10 format=3 uid="uid://c3g3u8e8rn51w"]

[ext_resource type="Script" path="res://Nodes/Ui/UI.gd" id="1_yrinb"]
[ext_resource type="Texture2D" uid="uid://c82l4xk5yls6o" path="res://Sprites/Objekts/Ores/CommonOrs/CommonOreIcon.png" id="2_0q5d0"]
[ext_resource type="Texture2D" uid="uid://dhb7qei48ppg2" path="res://Sprites/Objekts/Ores/UncommonOrs/UncommonOreIcon.png" id="3_bjpna"]
[ext_resource type="Texture2D" uid="uid://dkflrxq8v6ify" path="res://Sprites/Objekts/Ores/LegendaryOrs/LegendaryOreIcon.png" id="4_0ikb5"]
[ext_resource type="Texture2D" uid="uid://bsbdgd2ye5p53" path="res://Sprites/Objekts/Ores/RareOrs/RareOreIcon.png" id="4_aeryo"]
[ext_resource type="Texture2D" uid="uid://d0larhe6ol587" path="res://Sprites/Objekts/Ores/EpicOrs/EpicOreIcon.png" id="5_178pu"]
[ext_resource type="Texture2D" uid="uid://b2ao3bw451r4n" path="res://Sprites/Ui/StrenghtButton.png" id="7_sfpix"]
[ext_resource type="Texture2D" uid="uid://c3b10rxdleswn" path="res://Sprites/Ui/ValueButton.png" id="8_7fmdw"]
[ext_resource type="Texture2D" uid="uid://ehebr25e4gbn" path="res://Sprites/Ui/SpeedButton.png" id="9_63nlo"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_yrinb")

[node name="CommonS" type="Sprite2D" parent="."]
position = Vector2(48, 48)
scale = Vector2(2, 2)
texture = ExtResource("2_0q5d0")

[node name="CommonL" type="Label" parent="CommonS"]
offset_left = 16.0
offset_top = -4.0
offset_right = 26.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="UncommonS" type="Sprite2D" parent="."]
position = Vector2(48, 88)
scale = Vector2(2, 2)
texture = ExtResource("3_bjpna")

[node name="UncommonL" type="Label" parent="UncommonS"]
offset_left = 16.0
offset_top = -4.0
offset_right = 26.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="RareS" type="Sprite2D" parent="."]
position = Vector2(48, 128)
scale = Vector2(2, 2)
texture = ExtResource("4_aeryo")

[node name="RareL" type="Label" parent="RareS"]
offset_left = 16.0
offset_top = -4.0
offset_right = 26.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="EpicS" type="Sprite2D" parent="."]
position = Vector2(48, 168)
scale = Vector2(2, 2)
texture = ExtResource("5_178pu")

[node name="EpicL" type="Label" parent="EpicS"]
offset_left = 16.0
offset_top = -4.0
offset_right = 26.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="LegendaryS" type="Sprite2D" parent="."]
position = Vector2(48, 208)
scale = Vector2(2, 2)
texture = ExtResource("4_0ikb5")

[node name="LegendaryL" type="Label" parent="LegendaryS"]
offset_left = 16.0
offset_top = -4.0
offset_right = 26.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 448.0
offset_right = 128.0
offset_bottom = 648.0

[node name="Strength" type="TextureButton" parent="Control"]
layout_mode = 2
offset_left = 32.0
offset_top = 64.0
offset_right = 48.0
offset_bottom = 80.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("7_sfpix")

[node name="StrengthL" type="Label" parent="Control/Strength"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 27.0
scale = Vector2(0.5, 0.5)
text = "Lvl"

[node name="Value" type="TextureButton" parent="Control"]
layout_mode = 2
offset_left = 32.0
offset_top = 104.0
offset_right = 48.0
offset_bottom = 120.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
texture_normal = ExtResource("8_7fmdw")

[node name="ValueL" type="Label" parent="Control/Value"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 27.0
scale = Vector2(0.5, 0.5)
text = "Lvl"

[node name="Speed" type="TextureButton" parent="Control"]
layout_mode = 2
offset_left = 32.0
offset_top = 144.0
offset_right = 48.0
offset_bottom = 160.0
scale = Vector2(2, 2)
texture_normal = ExtResource("9_63nlo")

[node name="SpeedL" type="Label" parent="Control/Speed"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 27.0
scale = Vector2(0.5, 0.5)
text = "Lvl"

[connection signal="pressed" from="Control/Strength" to="." method="_on_strength_pressed"]
[connection signal="pressed" from="Control/Value" to="." method="_on_value_pressed"]
[connection signal="pressed" from="Control/Speed" to="." method="_on_speed_pressed"]
